# lcax

./: .gitattributes  .gitignore  .releaserc.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  COPYRIGHT  Cargo.toml  Pipfile  README.md  codegen.template.json  lcax.schema.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  validation.schema.json
.github/: CONTRIBUTION.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_csharp.yaml  build_javascript.yaml  build_python.yaml  build_rust.yaml  cicd.yaml  create_release.yaml  docs.yaml  publish_csharp.yaml  publish_javascript.yaml  publish_python.yaml  python.yaml  release.yaml  release_docs.yaml  rust.yaml
.junie/docs/: domain.md  triage-labels.md
.junie/mcp/: mcp.json
.junie/skills/grill-with-docs/: SKILL.md
.junie/skills/mantine-combobox/: SKILL.md
.junie/skills/mantine-combobox/references/: api.md  (+1 more)
.junie/skills/mantine-custom-components/: SKILL.md
.junie/skills/mantine-form/: SKILL.md
.junie/skills/setup-matt-pocock-skills/: SKILL.md
.junie/skills/to-issues/: ISSUE-TEMPLATE.md  SKILL.md
.junie/skills/to-prd/: SKILL.md
docs/: .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  astro.config.mjs  data_structure.md  eslint.config.mjs  examples.md  index.html  index.md  next.config.ts  package-lock.json  package.json  schemas.md  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs.old/: examples.md  usage.md
docs/code/javascript/: usage.js
docs/code/python/: usage.py
docs/examples/: basic_project.json
docs/overrides/stylesheets/: extra.css
docs/public/: searchIndex.json
docs/scripts/: createSearchIndex.ts
docs/src/: content.config.ts  main.tsx  mdx-components.tsx  mdx.d.ts
docs/src/app/: layout.tsx  page.tsx  sitemap.ts
docs/src/assets/: lcabyg-export.webm  realtimelca-export.webm  searchIndex.json
docs/src/components/: CodeVariants.astro  Header.astro  index.ts
docs/src/content/: config.ts
docs/src/lib/: caseTransformations.ts  createSlugMap.ts  getCode.ts  index.ts  mdx.ts  variables.ts
docs/src/pages/: index.ts
docs/src/scripts/: createSearchIndex.ts  generateAPIDocs.ts
docs/src/styles/: global.css
modules/calculation/: Cargo.toml
modules/calculation/src/: calculate.rs  lib.rs  models.rs  results.rs
modules/calculation/tests/: test_assembly.rs  test_calculate.rs  test_product.rs  test_project.rs  test_results.rs
modules/calculation/tests/datafixtures/: products_conversion.json  products_impacts.json  project.json
modules/convert/: Cargo.toml
modules/convert/src/: lib.rs
modules/convert/src/br_standard/: br18_generic_data.rs  mod.rs  models.rs  parse.rs  translations.rs  xlsx.rs
modules/convert/src/ilcd/: ilcd.rs  mod.rs  parse.rs
modules/convert/src/lcabyg/: br18_generic_data.rs  categories.rs  edges.rs  mod.rs  nodes.rs  parse.rs  results.rs  serialize.rs
modules/convert/src/slice/: mod.rs  model.rs  parse.rs
modules/convert/tests/: convert_tests.rs
modules/convert/tests/br_standard/: test_br_from_file.rs  test_parse_br_standard.rs
modules/convert/tests/br_standard/datafixtures/: Traditionelt_Etagehus.xlsx
modules/convert/tests/ilcd/: test_parse_ilcd.rs
modules/convert/tests/ilcd/datafixtures/: 00c28f1f-1d49-4c81-9208-138922a1dd6c.json  023f3b97-976a-41c4-b0f1-5357b9dc5b3e.json  0aa8b645-02d9-41b4-8aa3-70335af2a9e7.json  0b488798-140f-4efa-96e2-55aa46ed129a.json  0b4c397d-c7a1-4ceb-9718-184334f6364e.json  0cb92770-9007-48c6-bc03-466af8894419.json  0d1e4a59-4901-4973-a26f-1698f65a780f.json  0e0c4e37-b7e6-4a4f-b1c9-d36da0aa16f5.json  0e43fd10-1ca4-4baa-ae9f-08db7e36184f.json  0e80e6e7-6882-47be-8bd8-5cd869a746d9.json  0e9fd868-9656-489e-be6c-8251b3d43283.json  1bf3e138-54a4-4155-7116-08da598ce856.json  335241f9-db84-486c-9a19-cd5ebb791903.json  459392b1-18ad-4429-721e-08da598ce856.json  503dfca1-7c65-4179-9ffa-ebc6d8b48b7d.json  881b28b9-aaf3-4d80-aea5-08db7e36184f.json  b56530ee-77bf-49bd-7997-08d972c43176.json  c23b2987-776d-4d55-91c7-5f2a0f2c50f1.json  e7ff6cf1-d493-4cf0-ba82-6b3f1f6f71e7.json  f0e092b5-772f-4e0a-e997-08dab10a8a87.json  f63ac879-fa7d-4f91-813e-e816cbdf1927.json
modules/convert/tests/lcabyg/: test_parse_lcabyg.rs  test_parse_lcabyg_project.rs  test_parse_product.rs
modules/convert/tests/lcabyg/datafixtures/: 2f95c41e.json  2f95c41e_results.json  5aa09d72.json  dtu-science-park-kt-02.json  dtu-science-park-kt-02_results.json  e9e6e798.json  ef-02_engdraget.json  ef-02_engdraget_results.json  erlev-skole-sk-01.json  erlev-skole-sk-01_results.json  jysk-soedalsparken-kt-03.json  jysk-soedalsparken-kt-03_results.json  lcabyg_example_project.json  lcabyg_example_results.json  lcabyg_project.json  lisbjerg-bakke-eb-02.json  lisbjerg-bakke-eb-02_results.json  stages.json
modules/convert/tests/slice/: test_parse_slice.rs
modules/convert/tests/slice/datafixtures/: slice.parquet
modules/core/: Cargo.toml
modules/core/src/: country.rs  dates.rs  lib.rs  utils.rs  value.rs
modules/lcax/: Cargo.toml
modules/lcax/src/: javascript.rs  lib.rs  python.rs  rust.rs  schemars.rs
modules/models/: Cargo.toml
modules/models/src/: assembly.rs  epd.rs  generic_impact_data.rs  lib.rs  life_cycle_base.rs  product.rs  project.rs  shared.rs  techflow.rs
modules/models/tests/: test_epd.rs  test_project.rs  test_techflow.rs
modules/validation/: Cargo.toml
modules/validation/src/: lib.rs  model.bak.rs  model.rs  validate.bak.rs  validate.rs
modules/validation/src/rules/: equal.rs  greater.rs  includes.rs  less.rs  mod.rs  one_of.rs
modules/validation/tests/: test_rules.rs  test_validate.bak.rs  test_validate.rs  test_valitron.rs
modules/validation/tests/datafixtures/: validate.schema.json  validation_rules.bak.yaml  validation_rules.yaml  validation_rules_fail.yaml
src/: assembly.py  country.rs  export.py  javascript.rs  lib.rs  project.py  project.rs  python.rs  results.py  schemars.rs  utils.rs
src/lcabyg/: edges.rs  mod.rs  nodes.rs  parse.rs
src/slice/: model.rs  parse.rs  parse_old.rs
tests/: test_lcax.rs  test_parse_lcabyg.rs  test_parse_slice.rs
(+210 files in other folders)
