[package]
name = "lcax"
description = "LCAx is an open, machine and human-readable data format for exchanging LCA results."
version = "1.3.1"
authors = ["Christian Kongsgaard <christian@kongsgaard.eu>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://lcax.kongsgaard.eu"
documentation = "https://lcax.kongsgaard.eu"
repository = "https://github.com/ocni-dtu/lcax"

[lib]
name = "lcax"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "export-schema"
path = "src/schemars.rs"
test = false
bench = false

[features]
jsbindings = ["wasm-bindgen", "console_error_panic_hook"]

[dependencies]
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
epdx = "0.3.0"
wasm-bindgen = { version = "0.2.63", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }