[workspace]
members = [
    "modules/convert",
    "modules/core",
    "modules/lcax",
    "modules/models"
]

resolver = "2"

[workspace.package]
description = "LCAx is an open, machine and human-readable data format for exchanging LCA results."
version = "2.1.0"
authors = ["Christian Kongsgaard <christian@kongsgaard.eu>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://lcax.kongsgaard.eu"
documentation = "https://lcax.kongsgaard.eu"
repository = "https://github.com/ocni-dtu/lcax"


