[project]
name = "lcax"
description = "LCAx is an open, machine and human-readable data format for exchanging LCA results."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Christian Kongsgaard", email = "christian@kongsgaard.eu" },
]

dependencies = ["cffi"]

[project.optional-dependencies]
doc = [
    "mkdocs-material >=8.1.4,<9.0.0",
    "mdx-include >=1.4.1,<2.0.0",
]
code-gen = [
    "pydantic >=1.8.2,<2.0.0",
    "datamodel-code-generator",
]
tests = [
    'pytest',
    "pytest-datafixtures"
]

[project.urls]
homepage = "https://lcax.kongsgaard.eu"
documentation = "https://lcax.kongsgaard.eu"
repository = "https://github.com/ocni-dtu/lcax"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
python-source = "packages/python/src"
