[project]
name = "lcax"
description = "LCAx is an open, machine and human-readable data format for exchanging LCA results."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Christian Kongsgaard", email = "christian@kongsgaard.eu" },
]
dynamic = ["version"]

dependencies = [
    "cffi",
]

[project.optional-dependencies]
tests = [
    'pytest',
    "pytest-datafixtures"
]

[project.urls]
homepage = "https://lcax.kongsgaard.eu"
documentation = "https://lcax.kongsgaard.eu"
repository = "https://github.com/ocni-dtu/lcax"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pybindings"]
python-source = "packages/python/src"
manifest-path = "modules/lcax/Cargo.toml"

[tool.pytest.ini_options]
pythonpath = "packages/python/src"
testpaths = ["packages/python/tests/"]
