[package]
name = "lcax_calculation"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
name = "lcax_calculation"
crate-type = ["cdylib", "rlib"]

[dependencies]
lcax_models = { path = "../models", version = "*" }

[dev-dependencies]
serde_json = "1.0.116"