[package]
name = "lcax_calculation"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
name = "lcax_calculation"
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]
pybindings = ["pyo3", "pyo3/extension-module"]
jsbindings = ["wasm-bindgen", "console_error_panic_hook", "tsify-next"]

[dependencies]
lcax_models = { path = "../models", version = ">=3.0.0-beta.1" }
serde = { version = "1.0.219", features = ["derive"] }
schemars = { version = "0.8.21", features = ["chrono"] }
serde_json = "1.0.140"

# Python Bindings
pyo3 = { version = "0.24", features = ["abi3-py310"], optional = true }

# JS Bindings
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
tsify-next = { version = "0.5.5", optional = true }
