[package]
name = "lcax_convert"
description = { workspace = true}
version = { workspace = true}
authors = { workspace = true}
edition = { workspace = true}
readme = { workspace = true}
license-file = { workspace = true}
homepage = { workspace = true}
documentation = { workspace = true}
repository = { workspace = true}


[lib]
name = "lcax_convert"
crate-type = ["cdylib", "rlib"]

[dependencies]
schemars = { version = "0.8.19", features = ["chrono"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
field_access = "0.1.4"
parquet = {  version = "51.0.0", default-features = false, features = ["flate2", "snap"] }
uuid = { version = "1.8.0", features = ["v4", "v5"] }
lcax_core = { path = "../core", version = ">2.0.0" }
lcax_models = { path = "../models", version = ">2.0.0" }
chrono = "0.4.38"
bytes = "1.6.0"
