[package]
name = "lcax_convert"
description = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[lib]
name = "lcax_convert"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
field_access = "0.1.4"
lcax_core = { path = "../core", version = ">2.0.0" }
lcax_models = { path = "../models", version = ">2.0.0" }
chrono = "0.4.38"
serde_json = "1.0.125"
