[package]
name = "lcax_convert"
description = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[lib]
name = "lcax_convert"
crate-type = ["cdylib", "rlib"]

[features]
default = []
pybindings = ["pyo3", "pyo3/extension-module"]
jsbindings = ["wasm-bindgen", "console_error_panic_hook", "tsify"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
field_access = "0.1.4"
lcax_core = { path = "../core", version = ">2.0.0" }
lcax_models = { path = "../models", version = ">2.0.0" }
chrono = "0.4.38"
serde_json = "1.0.125"
log = "0.4.22"
uuid = { version = "1.8.0", features = ["v4", "v5"] }

# Python Bindings
pyo3 = { version = "0.23.4", features = ["abi3-py310", "chrono"], optional = true }

# JS Bindings
wasm-bindgen = { version = "0.2.92", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
tsify = { version = "0.4.5", optional = true }