[package]
name = "lcax_core"
description = { workspace = true}
version = { workspace = true}
authors = { workspace = true}
edition = { workspace = true}
readme = { workspace = true}
license-file = { workspace = true}
homepage = { workspace = true}
documentation = { workspace = true}
repository = { workspace = true}

[lib]
name = "lcax_core"
crate-type = ["cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

[features]
default = []
pybindings = ["pyo3", "pyo3/extension-module"]
jsbindings = ["wasm-bindgen", "console_error_panic_hook", "tsify-next", "strum", "strum_macros"]

[dependencies]
schemars = { version = "0.8.21", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
pkg-version = "1.0.0"
chrono = "0.4.38"

# Python Bindings
pyo3 = { version = "0.24", features = ["abi3-py310", "chrono"], optional = true }

# JS Bindings
wasm-bindgen = { version = "0.2.100", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
tsify-next = { version = "0.5.5", optional = true }
strum = { version = "0.27.2", optional = true}
strum_macros = { version = "0.27.2", optional = true}