[package]
name = "lcax"
description = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }


[lib]
name = "lcax"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "export-schema"
path = "src/bin/schemars.rs"
test = false
bench = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

[features]
default = []
pybindings = [
    "pyo3",
    "pyo3/extension-module",
    "lcax_models/pybindings",
    "lcax_core/pybindings",
    "lcax_convert/pybindings",
    "lcax_validation/pybindings",
    "lcax_calculation/pybindings",
]
jsbindings = [
    "wasm-bindgen",
    "serde-wasm-bindgen",
    "console_error_panic_hook",
    "tsify-next",
    "getrandom",
    "lcax_models/jsbindings",
    "lcax_core/jsbindings",
    "lcax_convert/jsbindings",
    "lcax_validation/jsbindings",
    "lcax_calculation/jsbindings",
]

[dependencies]
schemars = { version = "0.8.21", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
lcax_core = { path = "../core", version = ">=3.0.0-beta.1" }
lcax_models = { path = "../models", version = ">=3.0.0-beta.1" }
lcax_convert = { path = "../convert", version = ">=3.0.0-beta.1" }
lcax_calculation = { path = "../calculation", version = ">=3.0.0-beta.1" }
lcax_validation = { path = "../validation", version = ">=3.0.0-beta.1" }

# Python Bindings
pyo3 = { version = "0.24", features = ["abi3-py310", "chrono"], optional = true }

# JS Bindings
wasm-bindgen = { version = "0.2.100", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
tsify-next = { version = "0.5.5", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
