[package]
name = "lcax_models"
description = { workspace = true}
version = { workspace = true}
authors = { workspace = true}
edition = { workspace = true}
readme = { workspace = true}
license-file = { workspace = true}
homepage = { workspace = true}
documentation = { workspace = true}
repository = { workspace = true}


[lib]
name = "lcax_models"
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]
pybindings = ["pyo3", "pyo3/extension-module"]
jsbindings = ["wasm-bindgen", "console_error_panic_hook", "tsify"]

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
schemars = { version = "0.8.19", features = ["chrono"] }
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4", "v5"] }
lcax_core = { path = "../core", version = ">2.0.0" }
chrono = "0.4.38"

# Python Bindings
pyo3 = { version = "0.21.2", features = ["abi3-py310"], optional = true }

# JS Bindings
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
tsify = { version = "0.4.5", optional = true }


